fix(home): provider logos on mobile

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -284,11 +284,6 @@ a.more-info:visited {
   text-align: left;
   width: 100%;
   max-width: 600px;
-
-  @media (max-width: 700px) {
-    max-width: 400px;
-    margin: 0 auto 20px auto;
-  }
 }
 
 .text-box-centered {
@@ -349,10 +344,6 @@ a.more-info:visited {
   background-color: $color-dark-background;
   color: white;
   z-index: 2;
-
-  .text-box {
-    padding: 0 20px;
-  }
 }
 
 .item-box .example-unsubscribe-container {
@@ -367,7 +358,6 @@ a.more-info:visited {
 
 .provider-logos {
   margin: 30px auto 50px auto;
-  display: flex;
 }
 
 .provider-logo {
@@ -378,7 +368,7 @@ a.more-info:visited {
     transform: translateY(-2px);
   }
   &.imap {
-    margin: 0 10px;
+    margin: 0 20px 20px 0;
     img {
       height: 30px;
     }
